Ram17Compiler/test_programs/lexer/fail/fail9.ram17
class Faceplant {
public static void main (String[] args){
    print(This should not work because of the quote\n);
}
// This will fail because of the escape character, forward slash